--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Demo</title>
     </head>
     <body>
-        <h1>Test git</h1>
+        <h1>This is Heading 1</h1>
+        <h2>This is Heading 2</h2>
     </body>
 </html>
